--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <style>
         body {
-            background-color: #111;
+            background-color: #ffff;
             color: #fff;
             overflow-x: hidden;
         }
@@ -818,3 +818,4 @@
 
 </body>
 </html>
+
