--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <style>
         body {
-            background-color: #ffff;
+            background-color: #ffffff;
             color: #fff;
             overflow-x: hidden;
         }
@@ -818,4 +818,5 @@
 
 </body>
 </html>
+
 
