--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
         }
     
         .btn-metodologia {
-            background: #fff;
-            color: #000;
+            background: #071d41;
+            color: #ffffff;
             padding: 8px 22px;
             border-radius: 5px;
             border: none;
@@ -821,6 +821,7 @@
 
 </body>
 </html>
+
 
 
 
