--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <style>
         .section-metodologia {
             width: 100%;
-            background: #2e2e2e; /* cinza escuro */
+            background: #ffffff;
             color: #fff;
             text-align: center;
             padding: 80px 20px;
@@ -821,6 +821,7 @@
 
 </body>
 </html>
+
 
 
 
