--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     =============================== -->
     <section class="section-slider">
 
-        <h2>Entregáveis</h2>
+        <h2>Entregáveis da nossa LP</h2>
 
         <div class="slider-container-box">
 
@@ -821,6 +821,7 @@
 
 </body>
 </html>
+
 
 
 
