--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
 
             <!-- COLUNA 1 - Marca -->
             <div class="footer-brand">
-                <h3>Futuros em Seg. Pública e Defesa</h3>
+                <h3>Futuros em Seg. Pública <br> e Defesa</h3>
                 <a href="index.html">
                 <img src="LOGO (1).png" alt="logo">
                 </a>
@@ -821,6 +821,7 @@
 
 </body>
 </html>
+
 
 
 
