Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <h4>Propósito Institucional</h4>
                     <p>
                         A Linha de Pesquisa (LP) tem como propósito analisar cenários prospectivos 
-                        em segurança pública e defesa e produzir conhecimento. Atuamos aplicando 
+                        em segurança pública e defesa, produzindo conhecimento. Atuamos aplicando 
                         métodos de foresight e/ou análise de cenários às dinâmicas de segurança 
                         pública e defesa. Nossa atuação é guiada por objetividade, rigor acadêmico 
                         e metodológico, inovação e princípios que sustentam a credibilidade de 
@@ -821,6 +821,7 @@
 
 </body>
 </html>
+
 
 
 
