Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
                     <!-- CARD 3 -->
                     <div class="swiper-slide">
-                        <img class="slide-img" src="https://www.agencia.marinha.mil.br/sites/default/files/imagem-da-materia/capa_372.jpg" alt="">
+                        <img class="slide-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5aHwj_fLnMrNCDQU8wklHlUffAH-gjBciRw&s" alt="">
                         <div class="slide-content">
                             <p class="slide-title">Entregável 3</p>
                             <p class="slide-sub">Este entregável é um exemplo</p>
@@ -821,6 +821,7 @@
 
 </body>
 </html>
+
 
 
 
