--- a/index.html
+++ b/index.html
@@ -760,6 +760,8 @@
 
             <!-- COLUNA 3 - Políticas -->
             <div class="footer-links">
+                <a href="https://www.marinha.mil.br/egn/sobre_lsc">Laboratório de Simulações e Cenários</a>
+                <a href="https://www.gov.br/defesa/pt-br/assuntos/ensino-e-pesquisa/copy_of_defesa-e-academia/procad-defesa-i">Procad - Ministério da Defesa</a>
                 <a href="#">Política de Privacidade</a>
                 <a href="#">Declaração de acessibilidade</a>
             </div>
@@ -821,6 +823,7 @@
 
 </body>
 </html>
+
 
 
 
