Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
     <style>
         .footer {
             width: 100%;
-            background: #000;
+            background: #02061e;
             color: #fff;
             padding: 50px 40px;
         }
@@ -823,6 +823,7 @@
 
 </body>
 </html>
+
 
 
 
