--- a/contato.html
+++ b/contato.html
@@ -326,7 +326,7 @@
     <style>
         .footer {
             width: 100%;
-            background: #000;
+            background: #02061e;
             color: #fff;
             padding: 50px 40px;
         }
@@ -486,4 +486,5 @@
     </script>
 
 </body>
+
 </html>
