--- a/defesa.html
+++ b/defesa.html
@@ -361,7 +361,7 @@
     <style>
         .footer {
             width: 100%;
-            background: #000;
+            background: #02061e;
             color: #fff;
             padding: 50px 40px;
         }
@@ -521,4 +521,5 @@
     </script>
 
 </body>
+
 </html>
