Fix HTML encoding issues in metodologia.html

--- a/metodologia.html
+++ b/metodologia.html
@@ -396,7 +396,7 @@
     <style>
         .footer {
             width: 100%;
-            background: #000;
+            background: #02061e;
             color: #fff;
             padding: 50px 40px;
         }
@@ -556,4 +556,5 @@
     </script>
 
 </body>
+
 </html>
