--- a/observatorio.html
+++ b/observatorio.html
@@ -220,7 +220,7 @@
     <style>
         .footer {
             width: 100%;
-            background: #000;
+            background: #02061e;
             color: #fff;
             padding: 50px 40px;
         }
@@ -380,4 +380,5 @@
     </script>
 
 </body>
+
 </html>
