--- a/segpub.html
+++ b/segpub.html
@@ -386,7 +386,7 @@
     <style>
         .footer {
             width: 100%;
-            background: #000;
+            background: #02061e;
             color: #fff;
             padding: 50px 40px;
         }
@@ -546,4 +546,5 @@
     </script>
 
 </body>
+
 </html>
